[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/level_1.gd" type="Script" id=1]
[ext_resource path="res://scenes/player_ship_1.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/back-2.png" type="Texture" id=3]
[ext_resource path="res://scenes/tile.res" type="TileSet" id=4]
[ext_resource path="res://scenes/fixed_canon.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/level_1_sprite/path1016.png" type="Texture" id=6]
[ext_resource path="res://sprites/shutter.png" type="Texture" id=7]
[ext_resource path="res://sprites/ship-1.png" type="Texture" id=8]
[ext_resource path="res://scenes/laser_gate.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 25.9453, 109.036 )

[sub_resource type="Animation" id=2]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("shutter:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1000.81, -50.4169 ), Vector2( 1000.81, -50.4169 ) ]
}

[sub_resource type="Animation" id=3]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("shutter:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 800.81, -50.417 ), Vector2( 1000.81, -50.417 ) ]
}

[sub_resource type="Animation" id=4]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("shutter:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1000.81, -50.4169 ), Vector2( 800.81, -50.417 ) ]
}

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 22.0615, 102.48 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 100, 50 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 159.015, 209.754 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 876.271, 10 )

[sub_resource type="Animation" id=9]

length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("laser_gate/rect4627:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("laser_gate2/rect4627:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("laser_gate3/rect4627:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("laser_gate4/rect4627:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("laser_gate/Area2D/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("laser_gate2/Area2D/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("laser_gate3/Area2D/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("laser_gate4/Area2D/CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[node name="level_1" type="Node2D"]
script = ExtResource( 1 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 200, 400 )
rotation = 1.57079

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 720, 1280 )
_sections_unfolded = [ "Motion", "Transform" ]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility", "Z Index", "texture" ]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 200, 400 )
mode = 0
tile_set = ExtResource( 4 )
cell_size = Vector2( 100, 100 )
cell_quadrant_size = 100
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -1703965, 536870913, 0, -1703964, 0, 0, -1703963, 0, 0, -1703962, 0, 0, -1703961, 0, 0, -1703960, 0, 0, -1703959, 0, 0, -1703958, 0, 0, -1703957, 0, 0, -1703956, 0, 0, -1703955, 0, 0, -1703954, 1, 0, -1638430, 536870913, 0, -1638429, 0, 0, -1638428, 0, 0, -1638427, 0, 0, -1638426, 0, 0, -1638425, 0, 0, -1638424, 0, 0, -1638423, 0, 0, -1638422, 0, 0, -1638421, 0, 0, -1638420, 1610612736, 0, -1638419, 1610612736, 0, -1638418, 0, 0, -1638417, 1, 0, -1572894, 0, 0, -1572893, 0, 0, -1572892, 1073741825, 0, -1572883, 1610612737, 0, -1572882, 0, 0, -1572881, 0, 0, -1507358, 0, 0, -1507357, 0, 0, -1507346, 0, 0, -1507345, 0, 0, -1441822, 0, 0, -1441821, 0, 0, -1441810, 0, 0, -1441809, 0, 0, -1376286, 0, 0, -1376285, 0, 0, -1376274, 0, 0, -1376273, 0, 0, -1310750, 0, 0, -1310749, 0, 0, -1310738, 0, 0, -1310737, 0, 0, -1245214, 0, 0, -1245213, 0, 0, -1245202, 0, 0, -1245201, 0, 0, -1179678, 0, 0, -1179677, 0, 0, -1179666, 0, 0, -1179665, 0, 0, -1114142, 0, 0, -1114141, 0, 0, -1114130, 0, 0, -1114129, 0, 0, -1048606, 0, 0, -1048605, 0, 0, -1048594, 0, 0, -1048593, 0, 0, -1048591, 536870913, 0, -1048590, 0, 0, -1048589, 0, 0, -1048588, 0, 0, -1048587, 0, 0, -1048586, 0, 0, -1048585, 0, 0, -1048584, 0, 0, -1048583, 0, 0, -1048582, 0, 0, -1048581, 0, 0, -1048580, 0, 0, -1048579, 0, 0, -1048578, 0, 0, -1048577, 0, 0, -1114112, 0, 0, -1114111, 0, 0, -1114110, 1, 0, -983070, 0, 0, -983069, 0, 0, -983058, 0, 0, -983057, 0, 0, -983056, 0, 0, -983055, 0, 0, -983054, 0, 0, -983053, 0, 0, -983052, 0, 0, -983051, 0, 0, -983050, 0, 0, -983049, 0, 0, -983048, 0, 0, -983047, 0, 0, -983046, 0, 0, -983045, 0, 0, -983044, 0, 0, -983043, 0, 0, -983042, 0, 0, -983041, 0, 0, -1048576, 0, 0, -1048575, 0, 0, -1048574, 0, 0, -1048573, 0, 0, -1048572, 0, 0, -1048571, 0, 0, -1048570, 0, 0, -1048569, 0, 0, -1048568, 0, 0, -1048567, 1, 0, -917534, 0, 0, -917533, 0, 0, -917522, 1610612737, 0, -917521, 0, 0, -917520, 0, 0, -917519, 0, 0, -917518, 1073741825, 0, -983039, 1610612737, 0, -983038, 0, 0, -983037, 0, 0, -983036, 0, 0, -983035, 0, 0, -983034, 0, 0, -983033, 0, 0, -983032, 0, 0, -983031, 0, 0, -983030, 1, 0, -851998, 0, 0, -851997, 0, 0, -917497, 1610612737, 0, -917496, 0, 0, -917495, 0, 0, -917494, 0, 0, -786462, 0, 0, -786461, 0, 0, -851960, 1610612737, 0, -851959, 0, 0, -851958, 0, 0, -720926, 0, 0, -720925, 0, 0, -720914, 536870913, 0, -720913, 0, 0, -720912, 0, 0, -720911, 0, 0, -720910, 1, 0, -786431, 536870913, 0, -786430, 0, 0, -786429, 0, 0, -786428, 0, 0, -786427, 0, 0, -786426, 1, 0, -786423, 0, 0, -786422, 0, 0, -655390, 0, 0, -655389, 0, 0, -655378, 0, 0, -655377, 0, 0, -655376, 0, 0, -655375, 0, 0, -655374, 0, 0, -655373, 0, 0, -655372, 0, 0, -655371, 0, 0, -655370, 0, 0, -655369, 0, 0, -655368, 0, 0, -655367, 0, 0, -655366, 0, 0, -655365, 0, 0, -655364, 0, 0, -655363, 0, 0, -655362, 0, 0, -655361, 0, 0, -720896, 0, 0, -720895, 0, 0, -720894, 0, 0, -720893, 0, 0, -720892, 0, 0, -720891, 0, 0, -720890, 0, 0, -720887, 0, 0, -720886, 0, 0, -589854, 0, 0, -589853, 0, 0, -589852, 1, 0, -589843, 536870913, 0, -589842, 1610612736, 0, -589841, 0, 0, -589839, 1610612737, 0, -589838, 0, 0, -589837, 0, 0, -589836, 0, 0, -589835, 0, 0, -589834, 0, 0, -589833, 0, 0, -589832, 0, 0, -589831, 0, 0, -589830, 0, 0, -589829, 0, 0, -589828, 0, 0, -589827, 0, 0, -589826, 0, 0, -589825, 0, 0, -655360, 0, 0, -655359, 0, 0, -655358, 1073741825, 0, -655355, 0, 0, -655354, 1610612736, 0, -655351, 0, 0, -655350, 0, 0, -524318, 1610612737, 0, -524317, 0, 0, -524316, 0, 0, -524315, 0, 0, -524314, 0, 0, -524313, 0, 0, -524312, 0, 0, -524311, 0, 0, -524310, 0, 0, -524309, 0, 0, -524308, 0, 0, -524307, 0, 0, -524306, 0, 0, -524305, 1073741825, 0, -589819, 0, 0, -589818, 1610612736, 0, -589815, 0, 0, -589814, 0, 0, -458781, 1610612737, 0, -458780, 0, 0, -458779, 0, 0, -458778, 0, 0, -458777, 0, 0, -458776, 0, 0, -458775, 0, 0, -458774, 0, 0, -458773, 0, 0, -458772, 0, 0, -458771, 0, 0, -458770, 1073741825, 0, -524283, 0, 0, -524282, 1610612736, 0, -524279, 0, 0, -524278, 0, 0, -458747, 0, 0, -458746, 1610612736, 0, -458743, 0, 0, -458742, 0, 0, -393211, 0, 0, -393210, 1610612736, 0, -393207, 0, 0, -393206, 0, 0, -327678, 536870913, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327671, 0, 0, -327670, 0, 0, -327669, 0, 0, -327668, 0, 0, -327667, 1, 0, -196610, 536870913, 0, -196609, 0, 0, -262144, 0, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -262139, 0, 0, -262138, 1073741825, 0, -262135, 1610612737, 0, -262134, 0, 0, -262133, 0, 0, -262132, 0, 0, -262131, 0, 0, -262130, 0, 0, -262129, 0, 0, -262128, 0, 0, -262127, 0, 0, -262126, 0, 0, -262125, 0, 0, -262124, 1, 0, -131074, 0, 0, -131073, 0, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 1073741825, 0, -196596, 1610612737, 0, -196595, 0, 0, -196594, 0, 0, -196593, 0, 0, -196592, 0, 0, -196591, 0, 0, -196590, 0, 0, -196589, 0, 0, -196588, 0, 0, -65538, 0, 0, -65537, 1073741825, 0, -131053, 1610612737, 0, -131052, 0, 0, 131070, 0, 0, 131071, 1, 0, 65555, 536870913, 0, 65556, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 1, 0, 131084, 536870913, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 262142, 1610612737, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 1073741825, 0, 262146, 1610612737, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 1073741825, 0 )
_sections_unfolded = [ "Collision", "Occluder", "Transform", "tile_set" ]

[node name="level_1_boundery" type="StaticBody2D" parent="." groups=[
"wall",
]]
editor/display_folded = true
visible = false
position = Vector2( 200, 400 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
_sections_unfolded = [ "Transform" ]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="level_1_boundery"]
build_mode = 0
polygon = PoolVector2Array( -200, -100, -100, -100, 0, -200, 300, -200, 400, -300, 600, -300, 700, -400, 700, -1100, 600, -1200, 200, -1200, 100, -1100, -1300, -1100, -1400, -1200, -1700, -1200, -1800, -1100, -1800, -1000, -1900, -900, -2700, -900, -2800, -1000, -2800, -2400, -2700, -2500, -1900, -2500, -1800, -2400, -1800, -1500, -1700, -1400, -1400, -1400, -1300, -1500, 100, -1500, 200, -1400, 700, -1400, 900, -1200, 900, -400, 1000, -300, 1200, -300, 1300, -200, 1900, -200, 2000, -100, 2100, -100, 2100, -300, 2000, -400, 1400, -400, 1300, -500, 1100, -500, 1100, -1400, 900, -1600, 300, -1600, 200, -1700, -1400, -1700, -1500, -1600, -1600, -1600, -1600, -2500, -1800, -2700, -2800, -2700, -3000, -2500, -3000, -900, -2800, -700, -1800, -700, -1600, -900, -1600, -1000, -1500, -1000, -1400, -900, 200, -900, 300, -1000, 500, -1000, 500, -500, 300, -500, 200, -400, -100, -400, -200, -300 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="level_1_boundery"]
build_mode = 0
polygon = PoolVector2Array( -200, 100, -100, 100, 0, 200, 300, 200, 400, 300, 1200, 300, 1300, 200, 1900, 200, 2000, 100, 2100, 100, 2100, 300, 2000, 400, 1400, 400, 1300, 500, 300, 500, 200, 400, -100, 400, -200, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="level_1_boundery"]
position = Vector2( 2074.09, -0.443176 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform", "shape" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("..")
autoplay = "close"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/close = SubResource( 2 )
anims/shutter_1_close = SubResource( 3 )
anims/shutter_1_open = SubResource( 4 )
blend_times = [  ]

[node name="fixed_canon" parent="." instance=ExtResource( 5 )]
position = Vector2( 1600, 200 )

[node name="s" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 2250, 400 )
texture = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="s"]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="s/Area2D"]
position = Vector2( -28.8794, 0 )
shape = SubResource( 5 )

[node name="shutter" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 1000.81, -50.4169 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
_sections_unfolded = [ "Transform" ]

[node name="shutter" type="Sprite" parent="shutter"]
z_index = -1
texture = ExtResource( 7 )
_sections_unfolded = [ "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="shutter"]
shape = SubResource( 6 )
_sections_unfolded = [ "shape" ]

[node name="shutter_opner" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 1000.81, -50.417 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="shutter_opner"]
shape = SubResource( 7 )

[node name="enemys_cont" type="Node2D" parent="."]
editor/display_folded = true

[node name="one" type="Position2D" parent="enemys_cont"]
position = Vector2( -8.01703, -631.263 )

[node name="Node2D" type="Node2D" parent="."]
editor/display_folded = true

[node name="one" type="Area2D" parent="Node2D"]
position = Vector2( -108.029, -447.362 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/one"]
shape = SubResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="ship-1" type="Sprite" parent="."]
position = Vector2( -3582.09, -3177.15 )
scale = Vector2( 5, 5 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="laser_gate" parent="." instance=ExtResource( 9 )]
editor/display_folded = true
position = Vector2( -854.86, -900 )

[node name="rect4627" parent="laser_gate" index="0"]
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="CollisionShape2D" parent="laser_gate/StaticBody2D" index="0"]
position = Vector2( 5.06372, -175 )

[node name="Area2D" parent="laser_gate" index="4"]
editor/display_folded = false
_sections_unfolded = [ "Visibility" ]

[node name="laser_gate2" parent="." instance=ExtResource( 9 )]
editor/display_folded = true
position = Vector2( -557, -900 )

[node name="rect4627" parent="laser_gate2" index="0"]
visible = false
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="Area2D" parent="laser_gate2" index="4"]
editor/display_folded = false
_sections_unfolded = [ "Visibility" ]

[node name="CollisionShape2D" parent="laser_gate2/Area2D" index="0"]
disabled = true

[node name="laser_gate3" parent="." instance=ExtResource( 9 )]
editor/display_folded = true
position = Vector2( -257, -900 )

[node name="rect4627" parent="laser_gate3" index="0"]
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="Area2D" parent="laser_gate3" index="4"]
editor/display_folded = false
_sections_unfolded = [ "Visibility" ]

[node name="laser_gate4" parent="." instance=ExtResource( 9 )]
editor/display_folded = true
position = Vector2( 42, -900 )

[node name="rect4627" parent="laser_gate4" index="0"]
visible = false
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="Area2D" parent="laser_gate4" index="4"]
_sections_unfolded = [ "Visibility" ]

[node name="CollisionShape2D" parent="laser_gate4/Area2D" index="0"]
disabled = true

[node name="laser_gate_anim" type="AnimationPlayer" parent="."]
root_node = NodePath("..")
autoplay = "laser_gate_anim"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/laser_gate_anim = SubResource( 9 )
blend_times = [  ]

[connection signal="area_entered" from="s/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="shutter_opner" to="." method="_on_shutter_opner_body_entered"]
[connection signal="body_exited" from="shutter_opner" to="." method="_on_shutter_opner_body_exited"]
[connection signal="body_entered" from="Node2D/one" to="." method="_on_1_body_entered"]

[editable path="laser_gate"]

[editable path="laser_gate2"]

[editable path="laser_gate3"]

[editable path="laser_gate4"]
